--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="container">
@@ -28,12 +31,12 @@
       </div>
       <div id="right-container">
         <div id="text">
-          <h2 class="headline">
+          <h1 id="headline">
             <span style="font-weight: bold"
               >Build The Community Your Fans Will Love</span
             >
-          </h2>
-          <p class="sub-headline">
+          </h1>
+          <p id="sub-headline">
             Huddle re-imagines the way we build communities. You have a voice,
             but so does your audience. Create connections with your users as you
             engage in genuine discussion.
@@ -41,10 +44,11 @@
         </div>
         <button id="register-button">Register</button>
         <div id="logos">
-          <ion-icon name="logo-facebook"></ion-icon>
-          <ion-icon name="logo-twitter"></ion-icon>
-          <ion-icon name="logo-instagram"></ion-icon>
+          <ion-icon class="logo-icon" name="logo-facebook"></ion-icon>
+          <ion-icon class="logo-icon" name="logo-twitter"></ion-icon>
+          <ion-icon class="logo-icon" name="logo-instagram"></ion-icon>
         </div>
+   
       </div>
       <script
         type="module"
